[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PanelKalmanFilter"
version = "1.0"
authors = [{ name = "Adriel Ong", email = "adriel_datstat@zohomail.com" }, {name = "Azriel Cais Baluyut"}, {name = "Jowi Rapha Cruz"}]
description = "A Python package to model financial returns as Levy processes."
readme = "README.md"
license = { file="LICENSE" }
dependencies = [
    "pandas", 
    "plotly", 
    "matplotlib",
    "numpy",
    "scipy"
]
# More metadata can be added under the [project] table
